--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700;800&display=swap");
 
 :root {
-  --primary-color: #00605f;
-  --secondary-color: #017479;
+  --primary-color: #228B22;
+  --secondary-color: #228B22;
   --text-dark: #0f172a;
   --text-light: #94a3b8;
   --white: #ffffff;
@@ -19,7 +19,7 @@ body {
   font-family: "Montserrat", sans-serif;
   background: linear-gradient(
       to right,
-      rgba(2, 82, 89, 0.9),
+      rgb(34, 139, 34, 0.6),
       rgba(255, 255, 255, 0)
     ),
     url("assets/bg.jpg");
@@ -53,12 +53,16 @@ nav {
   display: flex;
   align-items: center;
   gap: 2rem;
+  border-radius: 3px;
 }
 
 .link a {
+  display: block;
   text-decoration: none;
   font-weight: 600;
   color: var(--white);
+  padding: 6px;
+  border-radius: 3px;
 }
 
 .search {
@@ -70,9 +74,12 @@ nav {
   gap: 1rem;
   background-color: var(--white);
   border-radius: 2rem;
-  transition: 0.3s;
+  transition: 0.2s;
 }
 
+.search:hover {
+  box-shadow: 5px 5px 5px 5px #88cd88 ;
+}
 .search input {
   width: 100%;
   font-size: 1rem;
@@ -192,9 +199,14 @@ nav {
   border: none;
   font-size: 1rem;
   font-weight: 600;
-  color: var(--white);
-  background-color: var(--secondary-color);
+  color: var(--primary-color);
+  background-color: var(--white);
   cursor: pointer;
+  border-radius: 10px;
+}
+.content .btn:hover {
+  background-color: var(--primary-color);
+  color: var(--white);
 }
 
 .destination__grid {
@@ -239,6 +251,13 @@ nav {
   color: var(--white);
   background-color: var(--primary-color);
   cursor: pointer;
+  border-radius: 3px;
+}
+
+.link a:hover {
+  background-color: var(--white);
+  color: #228B22;
+  border-radius: 20px;
 }
 
 @media (width < 1200px) {
